--- a/test.ipynb
+++ b/test.ipynb
@@ -10,13 +10,11 @@
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
     "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"2\"\n",
     "\n",
-    "import gzip\n",
     "import pickle\n",
-    "import random\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "old_v = tf.logging.get_verbosity()\n",
-    "tf.logging.set_verbosity(tf.logging.ERROR)\n",
+    "old_v = tf.compat.v1.logging.get_verbosity()\n",
+    "tf.compat.v1.logging.set_verbosity(tf.compat.v1.logging.ERROR)\n",
     "\n",
     "from tensorflow.python.framework import ops\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
@@ -285,110 +283,6 @@
     "    \n",
     "    return mini_batches\n",
     "\n",
-    "def train(data_S, data_T, training_mode, batch_size=500):\n",
-    "    tf.reset_default_graph()\n",
-    "    \n",
-    "    Xs, Xt, Ys, Yt, D = create_placeholders(28, 28, 3, 10)\n",
-    "    l = tf.placeholder(tf.float32, [], name='l')        # Gradient reversal scaler\n",
-    "    params = initialize_parameters()\n",
-    "    \n",
-    "    Fs = forward_propagation(Xs, params, 'feature extractor')\n",
-    "    Ft = forward_propagation(Xt, params, 'feature extractor')\n",
-    "    F = tf.concat([Fs, Ft], axis=0)\n",
-    "    F_ = _flip_gradient(F, learning_rate=l)\n",
-    "    \n",
-    "    out_label = forward_propagation(Fs, params, 'label predictor')\n",
-    "    out_domain = forward_propagation(F_, params, 'domain classifier')\n",
-    "\n",
-    "    L_label = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=out_label, labels=Ys))\n",
-    "    L_domain = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=out_domain, labels=D))\n",
-    "    \n",
-    "    L_final = tf.add(L_label, L_domain)\n",
-    "\n",
-    "    label_train_op = tf.train.AdamOptimizer(learning_rate=0.001).minimize(L_label)\n",
-    "    domain_train_op = tf.train.AdamOptimizer(learning_rate=0.001).minimize(L_domain)\n",
-    "    final_train_op = tf.train.AdamOptimizer(learning_rate=0.001).minimize(L_final)\n",
-    "\n",
-    "    y_hat = tf.argmax(tf.nn.softmax(out_label), 1)\n",
-    "    d_hat = tf.argmax(tf.nn.softmax(out_domain), 1)\n",
-    "\n",
-    "    acc_label = tf.reduce_mean(tf.cast(tf.equal(tf.argmax(Ys, 1), y_hat), tf.float32))\n",
-    "    acc_domain = tf.reduce_mean(tf.cast(tf.equal(tf.argmax(D, 1), d_hat), tf.float32))\n",
-    "    \n",
-    "    seed = 9449\n",
-    "    num_epochs = 100\n",
-    "    minibatch_size = 500\n",
-    "    \n",
-    "    if training_mode == 'dann':\n",
-    "        minibatch_size = 250\n",
-    "    \n",
-    "    sess = tf.compat.v1.InteractiveSession()\n",
-    "\n",
-    "    # Run the initialization\n",
-    "    sess.run(tf.compat.v1.global_variables_initializer())\n",
-    "        \n",
-    "    # Do the training loop\n",
-    "    for epoch in range(num_epochs):\n",
-    "        loss_f = 0.; loss_d = 0.; loss_p = 0.\n",
-    "        \n",
-    "        # number of minibatches of size minibatch_size in the train set\n",
-    "        # for the convenience, the size of the learning set and the verification set are the same.\n",
-    "        num_batches = int(data_S['x_train'].shape[0] / minibatch_size)\n",
-    "        seed = (seed + 2229)%3114\n",
-    "        \n",
-    "        batches_S = random_mini_batches(data_S['x_train'], data_S['y_train'], mini_batch_size=minibatch_size, seed=seed)\n",
-    "        batches_T = random_mini_batches(data_T['x_train'], data_T['y_train'], mini_batch_size=minibatch_size, seed=seed)\n",
-    "        \n",
-    "        for i, minibatch_S, minibatch_T in zip(range(num_batches), batches_S, batches_T):\n",
-    "            # Select a minibatch\n",
-    "            (X_s, Y_s) = minibatch_S\n",
-    "            (X_t, Y_t) = minibatch_T\n",
-    "            \n",
-    "            p = float(i) / num_batches\n",
-    "            #l_p = 2. / (1. + np.exp(-10. * p)) - 1\n",
-    "            l_p = 1.\n",
-    "            \n",
-    "            if training_mode == 'source only' :\n",
-    "                _, _loss_p = sess.run([label_train_op, L_label],\n",
-    "                                  feed_dict={'Xs:0': X_s, 'Ys:0': Y_s})                \n",
-    "                loss_p = loss_p + _loss_p / num_batches\n",
-    "            elif training_mode == 'target only' :\n",
-    "                _, _loss_p = sess.run([label_train_op, L_label],\n",
-    "                                  feed_dict={'Xs:0': X_t, 'Ys:0': Y_t})                \n",
-    "                loss_p = loss_p + _loss_p / num_batches\n",
-    "            elif training_mode == 'dann' :\n",
-    "                D_ = np.vstack([np.repeat([[1,0]], minibatch_size, axis=0), np.repeat([[0,1]], minibatch_size, axis=0)])\n",
-    "        \n",
-    "                _, _loss_f, _loss_d, _loss_p = sess.run([final_train_op, L_final, L_domain, L_label],\n",
-    "                                                    feed_dict={'Xs:0': X_s, 'Ys:0': Y_s, 'Xt:0': X_t, 'Yt:0': Y_t,\n",
-    "                                                               'D:0': D_, 'l:0': l_p})\n",
-    "                loss_f = loss_f + _loss_f / num_batches\n",
-    "                loss_d = loss_d + _loss_d / num_batches\n",
-    "                loss_p = loss_p + _loss_p / num_batches\n",
-    "            else :\n",
-    "                print(\"You have passed a wrong argument\\n\",\n",
-    "                      \"Training method should be one among 'source only', 'target only', 'dann'\")\n",
-    "                exit()\n",
-    "                \n",
-    "        acc_ps, acc_ds = sess.run([acc_label, acc_domain],\n",
-    "                                  feed_dict={'Xs:0': data_S['x_val'], 'Ys:0': data_S['y_val'],\n",
-    "                                             'Xt:0': np.zeros(shape=(0,28,28,3), dtype=np.float32), 'Yt:0': np.zeros(shape=(0,10), dtype=np.float32),\n",
-    "                                             'D:0': np.repeat([[1,0]], data_S['x_val'].shape[0], axis=0)})\n",
-    "        acc_pt, acc_dt = sess.run([acc_label, acc_domain],\n",
-    "                                  feed_dict={'Xs:0': data_T['x_val'], 'Ys:0': data_T['y_val'],\n",
-    "                                             'Xt:0': np.zeros(shape=(0,28,28,3), dtype=np.float32), 'Yt:0': np.zeros(shape=(0,10), dtype=np.float32),\n",
-    "                                             'D:0': np.repeat([[0,1]], data_T['x_val'].shape[0], axis=0)})\n",
-    "                \n",
-    "        report = \"Epoch %i:\\n  └LOSS: \"%(epoch+1)\n",
-    "        \n",
-    "        if training_mode == 'dann':\n",
-    "            report += \"total (%.3f), domain (%.3f), label (%.3f)\\n  \"%(loss_f, loss_d, loss_p)\n",
-    "            report += \"└ACC: label (S : %.3f/ T : %.3f), domain (S : %.3f/ T : %.3f)\"%(acc_ps, acc_pt, acc_ds, acc_dt)\n",
-    "        else :\n",
-    "            report += \"label (%.3f)\\n  \"%(loss_p)\n",
-    "            report += \"└ACC: label (S : %.3f/ T : %.3f)\"%(acc_ps, acc_pt)\n",
-    "            \n",
-    "        print(report)\n",
     "            \n",
     "mnist = MNISTdata()\n",
     "data_S = mnist.getTask()\n",
