--- a/test.ipynb
+++ b/test.ipynb
@@ -44,9 +44,9 @@
     "        \"\"\"\n",
     "        fig, axes = plt.subplots(nrows, ncols)\n",
     "        for i, ax in enumerate(axes.flat): \n",
-    "            ax.imshow(self.x[i,:])\n",
+    "            ax.imshow(self.task['x_train'][i,:])\n",
     "            ax.set_xticks([]); ax.set_yticks([])\n",
-    "            ax.set_title(np.argmax(self.y[i]))\n",
+    "            ax.set_title(np.argmax(self.task['y_train'][i]))\n",
     "        \n",
     "        plt.show()\n",
     "\n",
